removed generic root parameter from attribute