@@ -7,11 +7,12 @@ import io.github.factoryfx.javascript.data.attributes.types.JavascriptAttribute;
 
 import java.io.PrintStream;
 import java.util.Arrays;
+import java.util.List;
 
 public class ExampleJavascript extends FactoryBase<Void,ExampleJavascript> {
 
-    public final FactoryAttribute<ExampleJavascript,Void,ExampleData1> data = new FactoryAttribute<ExampleJavascript,Void,ExampleData1>().en("data");
-    public final JavascriptAttribute<PrintStream> specialAttribute=new JavascriptAttribute<>(()-> Arrays.asList(data.get()),PrintStream.class).de("code");
+    public final FactoryAttribute<Void,ExampleData1> data = new FactoryAttribute<Void,ExampleData1>().en("data");
+    public final JavascriptAttribute<PrintStream> specialAttribute=new JavascriptAttribute<>(()-> List.of(data.get()),PrintStream.class).de("code");
 
     public ExampleJavascript() {
     }
